# simpleStlViewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Camera.hpp  ConvertRanges.hpp  Mesh.hpp  Shader.hpp  StlReader.hpp  geometry.hpp
include/glad/: glad.h
shaders/: fragmentShader.glsl  vertexShader.glsl
src/: CMakeLists.txt  Camera.cpp  Geometry.cpp  Mesh.cpp  Shader.cpp  StlReader.cpp  geometry.cpp  glad.c  main.cpp
